--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "client": "nodemon --inspect src/client/client.js",
+    "server": "nodemon --inspect src/server/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -15,5 +17,9 @@
   "bugs": {
     "url": "https://github.com/felipefahrion/node-grpc-vs-rest/issues"
   },
-  "homepage": "https://github.com/felipefahrion/node-grpc-vs-rest#readme"
+  "homepage": "https://github.com/felipefahrion/node-grpc-vs-rest#readme",
+  "dependencies": {
+    "@grpc/grpc-js": "^1.5.10",
+    "nodemon": "^2.0.15"
+  }
 }
